sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:12: error: not found: value i
			if(!plusPetit(i,i+1))
                                      ^AlgGnomeSort:14: error: not found: value i
				echange(i,i+1);
                                        ^