sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
	
var length = getNombreValeurs(); 
	var fin:Boolean = false;
	
	do
	{
		fin=false;
		
		
			if(!plusPetit(i,i+1))
			{
				echange(i,i+1);
				fin=true;
			}
			
			
		
		
	} while (!fin)
}
